Fix for scrollbar on images

--- a/source/assets/stylesheets/_page.scss
+++ b/source/assets/stylesheets/_page.scss
@@ -359,6 +359,7 @@ $navbar-height: 60px;
 figure {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 figcaption {
